force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/HI_Fulfillment_Employee_Info__c.object-meta.xml
<CustomObject>
    <label>HI Fulfillment Employee Info</label>
    <nameField>
        <displayFormat>HIEI-{000000000}</displayFormat>
        <label>HI Fulfillment Employee Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Fulfillment Employee Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>