force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Employee Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>