force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Filing_State__c.field-meta.xml
<CustomField>
    <fullName>Filing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>