force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/HI_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>HI_Sent_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HI Sent At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>