force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>