force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>