force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Home_County__c.field-meta.xml
<CustomField>
    <fullName>Home_County__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>