force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Home_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Home_Street_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>