force-app/main/default/objects/HI_Fulfillment_Employee_Info__c/fields/Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>